// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Lyrics /> should render lyrics with name and text 1`] = `
<div
  className="cover-zoom__inner lyrics__inner"
>
  <button
    className="cover-zoom__close lyrics__close-btn qa-lyrics__close-btn"
    onClick={[Function]}
    type="button"
  />
  <p
    className="lyrics__text qa-lyrics__text"
  >
    <span
      className="lyrics__heading"
    >
      Hello
    </span>
     
    Lorem Ipsum
  </p>
</div>
`;

exports[`<Lyrics /> when lyrics are missing should render lyrics with name and "Instrumental" text 1`] = `
<div
  className="cover-zoom__inner lyrics__inner"
>
  <button
    className="cover-zoom__close lyrics__close-btn qa-lyrics__close-btn"
    onClick={[Function]}
    type="button"
  />
  <p
    className="lyrics__text qa-lyrics__text"
  >
    <span
      className="lyrics__heading"
    >
      Hello
    </span>
     
    Instrumental
  </p>
</div>
`;
